Fix shape memory usage